added standard classification of transported goods (SCTG) model and filled it; added a read-to-go csv for future uses

--- a/templates/entity-details.html
+++ b/templates/entity-details.html
@@ -5,7 +5,7 @@
 
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
-    <h1 class="h1 mt-4 mb-0">Full user information</h1>
+    <h1 class="h1 mt-4 mb-0">Full {{ whois }} information</h1>
     <a href="#" class="btn btn-primary btn-icon-split ml-3"><span class="icon text-white-50"><i class="fas fa-download"></i></span><span class="text">Generate Report</span></a>
 </div>
 
