--- a/templates/orders.html
+++ b/templates/orders.html
@@ -38,6 +38,7 @@
                         <th>Miles</th>
                         <th>Payment due</th>
                         <th>Gross</th>
+                        <th>Commodity</th>
                         <th>&gamma; rate</th>
                         <th>Details</th>
                         <th>Status</th>
@@ -55,6 +56,7 @@
                         <td>{{ order.mileage }}</td>
                         <td>{{ order.payment_due | date:"M j" }}</td>
                         <td>{{ order.gross }}</td>
+                        <td>{{ order.commodity }}</td>
                         <td>{{ order.gRate }}</td>
                         <td>
                             <a class='btn btn-info btn-sm' href="{% url 'dash-read-order' order.pk %}">View</a>
