--- a/templates/dash.html
+++ b/templates/dash.html
@@ -87,7 +87,7 @@
                             </a>
                             <div class="collapse" id="collapseLocations" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                                 <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                     <a class="nav-link" href="{% url 'dash-equipment' %}">
+                                     <a class="nav-link" href="{% url 'market-areas' %}">
                                          <div class="sb-nav-link-icon"><i class="fas fa-store"></i></div>
                                          Market Areas
                                      </a>
