--- a/templates/locations.html
+++ b/templates/locations.html
@@ -14,6 +14,7 @@
 <!-- Page Heading -->
 <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h1 mt-4 mb-0">Locations</h1>
+    <a href="{% url 'market-new-city' %}" class="btn btn-sm btn-primary shadow"><i class="fas fa-plus text-white-50"></i> New city</a>
 </div>
 
 <!-- Orders Table -->
@@ -48,8 +49,45 @@
             </div>
         </div>
     </div>
-</div>
-
+    <div class="col-xl-6">
+        <div class="card shadow mb-4">
+            <div class="card-header py-3">
+                 <i class="fas fa-table me-1"></i>
+                 Cities
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table class="table table-bordered table-hover" id="datatablesSimple" width="100%" cellspacing="0">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>State</th>
+                                <th>Market area</th>
+                                <th>CSA</th>
+                                <th>Time zone</th>
+                                <th>Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for city in cities %}
+                            <tr>
+                                <td>{{ city.name }}</td>
+                                <td>{{ city.state }}</td>
+                                <td>{{ city.market_area }}</td>
+                                <td>{{ city.stat_area }}</td>
+                                <td>{{ city.time_zone }}</td>
+                                <td>
+                                    <a class='btn btn-primary btn-sm' href="{% url 'market-read-city' city.pk %}">View</a>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div><!-- end row -->
 
 {% endblock %}
 
