did a spontaneous big change -- removed origin_state and destination_state from the Order model, because it is captured by a foreign key to  City model; didnt do it for the Entity, though, because it is an abstract class -- need to do it soon; but most importantly, need to be able to create City from within the new Order form;

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -49,8 +49,8 @@
                     <tr>
                         <td>{{ order.broker }}</td>
                         <td>{{ order.driver }}</td>
-                        <td>{{order.origin_city}}, {{ order.origin_state }}</td>
-                        <td>{{order.destination_city}}, {{ order.destination_state }}</td>
+                        <td>{{order.origin_city}}</td>
+                        <td>{{order.destination_city}}</td>
                         <td>{{ order.pickup_date | date:"M j h:i" }}</td>
                         <td>{{ order.delivery_date | date:"M j h:i"  }}</td>
                         <td>{{ order.mileage }}</td>
