made city addable from order form; moved all messages to the dash template

--- a/templates/new-form.html
+++ b/templates/new-form.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 <div class='row'>
-<div class='col-xl-6 mx-auto'>
+<div class='col-xxl-6 mx-auto'>
 <div class="card shadow my-4">
     {% block newform %}
     {% endblock %}
