--- a/templates/city-form.html
+++ b/templates/city-form.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="card-body">
-    <form method='post' class='bootstrap4'>
+    <form method='post'>
       {% csrf_token %}
       <div class="row">
         <div class="col-md">
@@ -28,7 +28,8 @@
 			{{ form.time_zone | as_crispy_field }}
         </div>
       </div>
-
+      
+      <input type="hidden" name="prev" value="{% url 'market-locations' %}">
       <button type="submit" class="btn btn-primary btn-block btn-lg">Submit</button>
     </form>
 </div>
