--- a/templates/dash.html
+++ b/templates/dash.html
@@ -114,6 +114,17 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
+                        {% if messages %}
+                            {% for message in messages %}
+                                <div class="alert alert-{{ message.tags}} alert-dismissible fade show" role="alert">
+                                    {{ message }}
+      
+                                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {% endfor %}
+                        {% endif %}
+
+
                         {% block content %}
                         {% endblock %}
                     </div>
