--- a/templates/locations.html
+++ b/templates/locations.html
@@ -47,7 +47,7 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered table-hover" id="datatablesSimple" width="100%" cellspacing="0">
+                    <table class="table table-bordered table-hover" id="datatablesSecond" width="100%" cellspacing="0">
                         <thead>
                             <tr>
                                 <th>Name</th>
@@ -67,7 +67,7 @@
                                 <td>{{ city.stat_area }}</td>
                                 <td>{{ city.time_zone }}</td>
                                 <td>
-                                    <a class='btn btn-primary btn-sm' href="{% url 'market-read-city' city.pk %}">View</a>
+                                    <a class='' href="{% url 'market-read-city' city.pk %}">View</a>
                                 </td>
                             </tr>
                             {% endfor %}
@@ -81,8 +81,6 @@
 
 {% endblock %}
 
-
-{% load static %}
 
 {% block styles %}
 {% endblock %}
