--- a/templates/order-form.html
+++ b/templates/order-form.html
@@ -48,10 +48,10 @@
         <div class="col-md-5">
 			{{ form.origin_address | as_crispy_field }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
 			{{ form.origin_city | as_crispy_field }}
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
 			{{ form.origin_zip_code | as_crispy_field }}
         </div>
       </div>
@@ -59,24 +59,16 @@
         <div class="col-md-5">
 			{{ form.destination_address | as_crispy_field }}
         </div>
-        <div class="col-md-4">
+        <div class="col-md-5">
 			{{ form.destination_city | as_crispy_field }}
         </div>
-        <div class="col-md-3">
+        <div class="col-md-2">
 			{{ form.destination_zip_code | as_crispy_field }}
         </div>
       </div>
       <div class="row">
-        <div class="col-md-8">
-			{{ form.origin_market | as_crispy_field }}
-        </div>
         <div class="col-md-4">
 			{{ form.pickup_date | as_crispy_field }}
-        </div>
-      </div>
-      <div class="row justify-content-between">
-        <div class="col-md-8">
-			{{ form.destination_market | as_crispy_field }}
         </div>
         <div class="col-md-4">
 			{{ form.delivery_date | as_crispy_field }}
@@ -206,7 +198,12 @@
 </div>
 
 
+{% endblock %}
 
+{% load static %}
 
+{% block styles %}
+{% endblock %}
 
+{% block scripts %}
 {% endblock %}
