metro level everything works

--- a/templates/city-form.html
+++ b/templates/city-form.html
@@ -25,6 +25,9 @@
 			{{ form.stat_area | as_crispy_field }}
         </div>
         <div class="col-md">
+			{{ form.metro_area | as_crispy_field }}
+        </div>
+        <div class="col-md">
 			{{ form.time_zone | as_crispy_field }}
         </div>
       </div>
