--- a/templates/locations.html
+++ b/templates/locations.html
@@ -53,7 +53,7 @@
                                 <th>Name</th>
                                 <th>State</th>
                                 <th>Market area</th>
-                                <th>CSA</th>
+                                <th>Metro area</th>
                                 <th>Time zone</th>
                                 <th>Options</th>
                             </tr>
@@ -64,7 +64,7 @@
                                 <td>{{ city.name }}</td>
                                 <td>{{ city.state }}</td>
                                 <td>{{ city.market_area }}</td>
-                                <td>{{ city.stat_area }}</td>
+                                <td>{{ city.metro_area }}</td>
                                 <td>{{ city.time_zone }}</td>
                                 <td>
                                     <a class='' href="{% url 'market-read-city' city.pk %}">View</a>
