--- a/templates/order-form.html
+++ b/templates/order-form.html
@@ -183,6 +183,9 @@
 	    		{{ city_form.stat_area | as_crispy_field }}
             </div>
             <div class="col-md">
+	    		{{ city_form.metro_area | as_crispy_field }}
+            </div>
+            <div class="col-md">
 	    		{{ city_form.time_zone | as_crispy_field }}
             </div>
           </div>
