added shipper CRUD

--- a/templates/main.html
+++ b/templates/main.html
@@ -42,18 +42,32 @@
         <div class="card shadow mb-4 h-100">
             <div class="card-header py-3">
                  <i class="fas fa-chart-pie me-1"></i>
-                 Earnings by origin state
+                 Earnings by origin metro area
             </div>
             <!-- Card Body -->
             <div class="card-body">
                 <div class="chart-geo">
-                    <div id="earningsByState"></div>
+                    <div id="earningsByOrigin"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-xl-4">
+        <div class="card shadow mb-4 h-100">
+            <div class="card-header py-3">
+                 <i class="fas fa-chart-pie me-1"></i>
+                 Earnings by destination metro area
+            </div>
+            <!-- Card Body -->
+            <div class="card-body">
+                <div class="chart-geo">
+                    <div id="earningsByDestination"></div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="col-xl-8">
+    <div class="col-xl-4">
         <div class="card shadow mb-4 h-100">
             <div class="card-header py-3">
                  <i class="fas fa-bars-progress me-1"></i>
@@ -112,7 +126,8 @@
     const myDates = [{% for i in earnings %}"{{ i.payment_due }}",{% endfor %}];
     const driverGross = [{% for i in earnings_by_driver %}{{ i.gross }},{% endfor %}];
     const driverNames = [{% for i in earnings_by_driver %}"{{ i.driver__first_name }} {{ i.driver__last_name}}",{% endfor %}];
-    const stateGross = [["State", "Earnings"],{% for i in earnings_by_state %}["{{ i.origin_city__metro_area__code }}",{{ i.gross }}],{% endfor %}];
+    const originGross = [["State", "Earnings"],{% for i in earnings_by_origin %}["{{ i.origin_city__metro_area__code }}",{{ i.gross }}],{% endfor %}];
+    const destinationGross = [["State", "Earnings"],{% for i in earnings_by_destination %}["{{ i.destination_city__metro_area__code }}",{{ i.gross }}],{% endfor %}];
 </script>
 <script src="{% static 'js/chart-area.js' %}"></script>
 <script src="{% static 'js/chart-pie.js' %}"></script>
