--- a/templates/dash.html
+++ b/templates/dash.html
@@ -68,6 +68,10 @@
                             <div class="sb-sidenav-menu-heading">Extra</div>
 
 
+                            <a class="nav-link" href="{% url 'dash-shippers' %}">
+                                <div class="sb-nav-link-icon"><i class="fas fa-user-group"></i></div>
+                                Shippers
+                            </a>
                             <a class="nav-link" href="{% url 'dash-equipment' %}">
                                 <div class="sb-nav-link-icon"><i class="fas fa-truck-moving"></i></div>
                                 Equipment
