--- a/templates/orders.html
+++ b/templates/orders.html
@@ -52,17 +52,25 @@
                             <a class='btn btn-info btn-sm' href="{% url 'dash-read-order' order.pk %}">View</a>
                         </td>
                         <td>
-                            {% if order.completed %}
-                                Completed;
-                            {% else %}
-                                In-progress;
-                            {% endif %}
-
-                            {% if order.paid %}
-                                Paid
-                            {% else %}
-                                Not paid
-                            {% endif %}
+				{% if order.completed and order.paid %}
+                    <h4 class="small font-weight-bold">Delivered;paid</h4>
+                    <div class="progress mb-4">
+                        <div class="progress-bar bg-success" role="progressbar" style="width: 100%"
+                            aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+				{% elif order.completed and not order.paid %}
+                    <h4 class="small font-weight-bold">Delivered;not paid</h4>
+                    <div class="progress mb-4">
+                        <div class="progress-bar bg-info" role="progressbar" style="width: 80%"
+                            aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+				{% elif not order.completed %}
+                    <h4 class="small font-weight-bold">Booked</h4>
+                    <div class="progress mb-4">
+                        <div class="progress-bar bg-warning" role="progressbar" style="width: 20%"
+                            aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+				{% endif %}
                         </td>
                     </tr>
                     {% endfor %}
